parallax scroll fixed

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
     <span class="mobile_nav" style="font-size:30px;cursor:pointer;position:fixed;" onclick="openNav()">☰ </span>
     <section class="hero">
-        <div class="parallax-window" data-parallax="scroll" data-image-src="./img/hero4.jpg">
+        <div class="parallax-window" data-parallax="scroll" data-image-src="./img/overlay-pic.png">
             <p>WE ARE AN ORGANIZATION ADDRESSING</p>
         </div>
     </section>
@@ -50,19 +50,22 @@
 
 
     <section class="quote">
-        <div class="parallax-window" data-parallax="scroll" data-image-src="./img/qoute-pic2.JPG"></div>
+        <div class="parallax-window" data-parallax="scroll" data-image-src="./img/quote-pic.png"></div>
     </section>
 
     <section class="impact">
         <div class="row">
             <div class="small-12 medium-4 large-4 columns">
-                <p>3000 <br> <span class="impact-small">VOLUNTEERS</span> </p>
+                <p>3000</p>
+                <p><span>VOLUNTEERS</span></p>
             </div>
             <div class="small-12 medium-4 large-4 columns">
-                <p>3000 <br> <span class="impact-small">VOLUNTEERS</span> </p>
+                <p>3000</p>
+                <p><span>VOLUNTEERS</span></p>
             </div>
             <div class="small-12 medium-4 large-4 columns">
-                <p>3000 <br> <span class="impact-small">VOLUNTEERS</span> </p>
+                <p>3000</p>
+                <p><span>VOLUNTEERS</span></p>
             </div>
         </div>
     </section>
@@ -95,7 +98,7 @@
     <div class="contact">
         <form>
             <div class="input-group message">
-                <textarea name="" id="" cols="47" rows="5" placeholder="Email Us"></textarea>
+                <textarea name="" id="" cols="47" rows="5" placeholder="Search in this website"></textarea>
             </div>
         </form>
     </div>
