changes made on about page

--- a/about.html
+++ b/about.html
@@ -24,17 +24,17 @@
   <div class="small-12 large-2 columns"><p></p></div>
  --></div>
 
-<div class="row" id="begin">
+<div class="row" id="begin"><!-- 
   <div class="small-12 large-2 columns">
   	<p></p>
   </div>
-  <div class="small-12 large-8 columns">
+  <div class="small-12 large-8 columns"> -->
   	<h2>WHO WE ARE</h2>
-  	<p></p>
+  	<!-- <p></p>
   </div>
   <div class="small-12 large-2 columns">
   	<p></p>
-  </div>
+  </div> -->
 </div>
 <div class="large-12">
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec consectetur est et massa elementum venenatis. In condimentum massa vel risus lobortis, sed tempor tortor posuere. Quisque pretium laoreet dignissim. Aliquam erat volutpat. Morbi sit amet consequat purus. 
@@ -54,16 +54,7 @@
   <div class="large-6 columns"> <img src="img/san2.jpg" style="width:100%; "></div>
 </div>
 <div class="row" id="som">
-<!--   <div class="small-12 large-2 columns">
-  	<p></p>
-  </div>
-  <div class="small-12 large-8 columns"> -->
   	<h2>WHY WE DO THIS</h2>
-  	<!-- <p></p> -->
-  <!-- </div>
-  <div class="small-12 large-2 columns">
-  	<p></p>
-  </div> -->
 </div>
 <div class="large-12">
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec consectetur est et massa elementum venenatis. In condimentum massa vel risus lobortis, sed tempor tortor posuere. Quisque pretium laoreet dignissim. Aliquam erat volutpat. Morbi sit amet consequat purus. Nullam tincidunt justo vitae accumsan tincidunt. Pellentesque efficitur non ipsum quis interdum. Quisque ullamcorper vulputate leo nec eleifend. Ut volutpat fermentum neque ac blandit. Ut libero neque, vestibulum ac scelerisque sed, dapibus sit amet libero. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Etiam congue, enim eu ultricies lobortis, metus est ultricies felis, rutrum elementum tortor ligula nec metus.
@@ -82,7 +73,7 @@ function carousel() {
     myIndex++;
     if (myIndex > x.length) {myIndex = 1}    
     x[myIndex-1].style.display = "block";  
-    setTimeout(carousel, 3000); // Change image every 2 seconds
+    setTimeout(carousel, 3000); // Change image every 3 seconds
 }
 </script>
 
