about section edited

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <section class="hero">
         <div class="parallax-window" data-parallax="scroll" data-image-src="./img/overlay-pic.png">
-            <p>WE ARE AN ORGANIZATION ADDRESSING</p>
+            <p>WE ARE TRANSFORMING THE LIVES OF YOUNG LADIES ALL OVER AFRICA</p>
         </div>
     </section>
     <section class="about">
