--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </section>
 
     <section class="impact">
-        <div class="row">
+        <div class="row pad-impact">
             <div class="small-12 medium-4 large-4 columns">
                 <p>3000</p>
                 <p><span>VOLUNTEERS</span></p>
