overlay on images in events n img sizes adjusted

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
+    <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Raleway:200' rel='stylesheet' type='text/css'>
@@ -11,10 +11,13 @@
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" type="text/css" href="css/about.css">
     <link rel="stylesheet" href="css/nav_mobile.css">
-  </head>
+</head>
 
-  <style>
-.mySlides {display:none;}
+<style>
+    .mySlides {
+        display: none;
+    }
+
 </style>
 
 <body>
@@ -47,58 +50,58 @@
         <span class="mobile_nav" style="font-size:30px;cursor:pointer;position:fixed;" onclick="openNav()">☰ </span>
     </section>
     <!--    End of Nav Bar-->
-  
- <div id="slideshow">
- <!--  <div class="small-12 large-2 columns"><p></p></div>
+
+    <div id="slideshow">
+        <!--  <div class="small-12 large-2 columns"><p></p></div>
   <div class="small-12 large-8 columns"> -->
-  	
-	  <div class="w3-content w3-section" style="max-width:100%; height:100%;" id="themselves">
-		  <img class="mySlides" src="img/san1.jpg" style="width:100%">
-		  <img class="mySlides" src="img/san2.gif" style="width:100%">
-		  <img class="mySlides" src="img/san3.jpg" style="width:100%">
-	  </div>
-  <!-- </div>
+
+        <div class="w3-content w3-section" style="max-width:100%; height:100%;" id="themselves">
+            <img class="mySlides" src="img/san1.jpg" style="width:100%">
+            <img class="mySlides" src="img/san2.gif" style="width:100%">
+            <img class="mySlides" src="img/san3.jpg" style="width:100%">
+        </div>
+        <!-- </div>
   <div class="small-12 large-2 columns"><p></p></div>
  --></div>
 
-<div class="row" id="begin">
-  <div class="small-12 large-2 columns">
-  	<p></p>
-  </div>
-  <div class="small-12 large-8 columns">
-  	<h2>WHO WE ARE</h2>
-  	<p></p>
-  </div>
-  <div class="small-12 large-2 columns">
-  	<p></p>
-  </div>
-</div>
-<div class="large-12">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec consectetur est et massa elementum venenatis. In condimentum massa vel risus lobortis, sed tempor tortor posuere. Quisque pretium laoreet dignissim. Aliquam erat volutpat. Morbi sit amet consequat purus. 
-</div>
+    <div class="row" id="begin">
+        <div class="small-12 large-2 columns">
+            <p></p>
+        </div>
+        <div class="small-12 large-8 columns">
+            <h2>WHO WE ARE</h2>
+            <p></p>
+        </div>
+        <div class="small-12 large-2 columns">
+            <p></p>
+        </div>
+    </div>
+    <div class="large-12">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec consectetur est et massa elementum venenatis. In condimentum massa vel risus lobortis, sed tempor tortor posuere. Quisque pretium laoreet dignissim. Aliquam erat volutpat. Morbi sit amet consequat purus.
+    </div>
 
-<div class="row" id="program">
-  <div class="large-6 columns"> <img src="img/san3.jpg" style="width:100%; "></div>
-  <div class="large-6 columns" id="txt">
-<p>Integer vitae odio orci. Pellentesque consectetur nulla elementum vestibulum pharetra. Integer euismod, massa et suscipit cursus, augue eros finibus ipsum, </p>
-</div>
-<p>Integer vitae odio orci. Pellentesque consectetur nulla elementum vestibulum pharetra. Integer euismod, massa et suscipit cursus, augue eros finibus ipsum, sed viverra ipsum lorem ac tortor. Mauris non mauris fermentum, vestibulum metus auctor, hendrerit magna. Maecenas eu ex eget nibh gravida viverra nec nec quam. Curabitur eu ullamcorper nisl, ut porta est. Praesent rutrum efficitur lacus, nec pellentesque nisl consequat non. Cras consequat tellus ac tempor pharetra</p>
-</div>
-<div class="row" id="events">
-  <div class="large-6 columns" id="txt">KLMCDINIVUENRIO
-<p>Integer vitae odio orci. Pellentesque consectetur nulla elementum vestibulum pharetra. Integer euismod, massa et suscipit cursus, augue eros finibus ipsum, </p> 
-</div>
-  <div class="large-6 columns"> <img src="img/san2.jpg" style="width:100%; "></div>
-</div>
-<div class="row" id="som">
-  	<h2>WHY WE DO THIS</h2>
-</div>
-<div class="large-12">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec consectetur est et massa elementum venenatis. In condimentum massa vel risus lobortis, sed tempor tortor posuere. Quisque pretium laoreet dignissim. Aliquam erat volutpat. Morbi sit amet consequat purus. Nullam tincidunt justo vitae accumsan tincidunt. Pellentesque efficitur non ipsum quis interdum. Quisque ullamcorper vulputate leo nec eleifend. Ut volutpat fermentum neque ac blandit. Ut libero neque, vestibulum ac scelerisque sed, dapibus sit amet libero. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Etiam congue, enim eu ultricies lobortis, metus est ultricies felis, rutrum elementum tortor ligula nec metus.
-</p>
-</div>
+    <div class="row" id="program">
+        <div class="large-6 columns"> <img src="img/san3.jpg" style="width:100%; "></div>
+        <div class="large-6 columns" id="txt">
+            <p>Integer vitae odio orci. Pellentesque consectetur nulla elementum vestibulum pharetra. Integer euismod, massa et suscipit cursus, augue eros finibus ipsum, </p>
+        </div>
+        <p>Integer vitae odio orci. Pellentesque consectetur nulla elementum vestibulum pharetra. Integer euismod, massa et suscipit cursus, augue eros finibus ipsum, sed viverra ipsum lorem ac tortor. Mauris non mauris fermentum, vestibulum metus auctor, hendrerit magna. Maecenas eu ex eget nibh gravida viverra nec nec quam. Curabitur eu ullamcorper nisl, ut porta est. Praesent rutrum efficitur lacus, nec pellentesque nisl consequat non. Cras consequat tellus ac tempor pharetra</p>
+    </div>
+    <div class="row" id="events">
+        <div class="large-6 columns" id="txt">KLMCDINIVUENRIO
+            <p>Integer vitae odio orci. Pellentesque consectetur nulla elementum vestibulum pharetra. Integer euismod, massa et suscipit cursus, augue eros finibus ipsum, </p>
+        </div>
+        <div class="large-6 columns"> <img src="img/san2.jpg" style="width:100%; "></div>
+    </div>
+    <div class="row" id="som">
+        <h2>WHY WE DO THIS</h2>
+    </div>
+    <div class="large-12">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec consectetur est et massa elementum venenatis. In condimentum massa vel risus lobortis, sed tempor tortor posuere. Quisque pretium laoreet dignissim. Aliquam erat volutpat. Morbi sit amet consequat purus. Nullam tincidunt justo vitae accumsan tincidunt. Pellentesque efficitur non ipsum quis interdum. Quisque ullamcorper vulputate leo nec eleifend. Ut volutpat fermentum neque ac blandit. Ut libero neque, vestibulum ac scelerisque sed, dapibus sit amet libero. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Etiam congue, enim eu ultricies lobortis, metus est ultricies felis, rutrum elementum tortor ligula nec metus.
+        </p>
+    </div>
 
-=======
+    =======
     <!--
 
     <link href='https://fonts.googleapis.com/css?family=Raleway:200' rel='stylesheet' type='text/css'>
@@ -112,29 +115,32 @@
 -->
 
 
-  
-</head>
 
-<body>
+    <!--</head>-->
+
+    <!--<body>-->
 
 
 
-	<script>
-var myIndex = 0;
-carousel();
+    <script>
+        var myIndex = 0;
+        carousel();
 
-function carousel() {
-    var i;
-    var x = document.getElementsByClassName("mySlides");
-    for (i = 0; i < x.length; i++) {
-       x[i].style.display = "none";  
-    }
-    myIndex++;
-    if (myIndex > x.length) {myIndex = 1}    
-    x[myIndex-1].style.display = "block";  
-    setTimeout(carousel, 3000); // Change image every 3 seconds
-}
-</script>
+        function carousel() {
+            var i;
+            var x = document.getElementsByClassName("mySlides");
+            for (i = 0; i < x.length; i++) {
+                x[i].style.display = "none";
+            }
+            myIndex++;
+            if (myIndex > x.length) {
+                myIndex = 1
+            }
+            x[myIndex - 1].style.display = "block";
+            setTimeout(carousel, 3000); // Change image every 3 seconds
+        }
+
+    </script>
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
     <script src="js/vendor/foundation.js"></script>
