--- a/events.html
+++ b/events.html
@@ -53,7 +53,7 @@
                         <div class="card">
                             <div class="image img_1">
                                 <!--                                <img src="./img/hero.jpg">-->
-                                <span class="title">Road Warrior</span>
+                                <span class="title">Jibebe Highschool outreach</span>
                             </div>
                             <div class="content">
                                 <div class="small-10 medium-11 large-11 column event_date event_txt">
@@ -89,7 +89,7 @@
                         <div class="card">
                             <div class="image img_2">
                                 <!--                                <img src="./img/pad2.jpg">-->
-                                <span class="title">Road Warrior</span>
+                                <span class="title">Young Girls Camp Kawangware</span>
                             </div>
                             <div class="content">
                                 <div class="small-10 medium-11 large-11 column event_date event_txt">
@@ -112,7 +112,6 @@
                 </div>
             </div>
         </div>
-
 
 
 
@@ -122,10 +121,13 @@
             <div class=" small-centered large-centered columns ">
                 <div class="row">
                     <div class=" columns">
+
+
                         <div class="card">
                             <div class="image img_3">
+
                                 <!--                                <img src="./img/pad.jpeg">-->
-                                <span class="title">Road Warrior</span>
+                                <span class="title">Riara River School</span>
                             </div>
                             <div class="content">
                                 <div class="small-10 medium-11 large-11 column event_date event_txt">
@@ -148,6 +150,7 @@
                 </div>
             </div>
         </div>
+
     </section>
 
 
