--- a/about.html
+++ b/about.html
@@ -34,14 +34,14 @@
                 <li style="float:right; margin-right:100px; padding-top:20px;"><a href="./programs.html">SUPPORT</a></li>
                 <li style="float:right; padding-right:20px; padding-top:20px;"><a href="./events.html">EVENTS</a></li>
                 <li style="float:right; padding-right:20px; padding-top:20px;"><a href="./about.html">ABOUT</a></li>
-                <li style="float:right; padding-right:20px; padding-top:20px;"><a href="#hero">HOME</a></li>
+                <li style="float:right; padding-right:20px; padding-top:20px;"><a href="index.html">HOME</a></li>
             </ul>
         </nav>
 
         <div id="myNav" class="overlay">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
             <div class="overlay-content">
-                <a href="#hero">HOME</a>
+                <a href="index.html">HOME</a>
                 <a href="./about.html">ABOUT</a>
                 <a href="./events.html">EVENTS</a>
                 <a href="./programs.html">SUPPORT</a>
