--- a/programs.html
+++ b/programs.html
@@ -18,6 +18,21 @@
 
 <div class="column row wrapper">
 
+    <section>
+        <nav class="top-navigation">
+            <ul>
+                <li>
+                    <a href="#home"><img src="./img/pngone.png"></a>
+                </li>
+
+                <li style="float:right; margin-right:100px; padding-top:20px;"><a href="#">PROGRAM</a></li>
+                <li style="float:right; padding-right:20px; padding-top:20px;"><a href="#">EVENTS</a></li>
+                <li style="float:right; padding-right:20px; padding-top:20px;"><a href="#">ABOUT</a></li>
+                <li style="float:right; padding-right:20px; padding-top:20px;"><a href="#">HOME</a></li>
+            </ul>
+        </nav>
+    </section>
+
 <h1>
     Stardom-Foundation | Programs
 </h1>
