--- a/programs.html
+++ b/programs.html
@@ -8,7 +8,7 @@
     <!--<link rel="shortcut icon" href="img/logo.png" type="image/png">-->
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/ionicons.css" />
-    <link rel="stylesheet" href="css/app.css" />
+    <!--<link rel="stylesheet" href="css/app.css" />-->
     <link rel="stylesheet" href="programs.css" />
 
 </head>
