edited events page

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                         <div class="row">
                             <div class=" columns">
                                 <div class="card-small">
-                                    <div class="image img_1">
-                                        <span class="title">Road Warrior</span>
+                                    <div class="image img_22">
+                                        <span class="card-header">Road Warrior</span>
                                     </div>
                                     <div class="content">
                                         <div class="small-10 medium-11 large-11 column event_date event_txt">
@@ -113,8 +113,8 @@
                         <div class="row">
                             <div class=" columns">
                                 <div class="card-small">
-                                    <div class="image img_1">
-                                        <span class="title">Road Warrior</span>
+                                    <div class="image img_22">
+                                        <span class="card-header">Road Warrior</span>
                                     </div>
                                     <div class="content">
                                         <div class="small-10 medium-11 large-11 column event_date event_txt">
@@ -139,8 +139,8 @@
                         <div class="row">
                             <div class=" columns">
                                 <div class="card-small">
-                                    <div class="image img_1">
-                                        <span class="title">Road Warrior</span>
+                                    <div class="image img_22">
+                                        <span class="card-header">Road Warrior</span>
                                     </div>
                                     <div class="content">
                                         <div class="small-10 medium-11 large-11 column event_date event_txt">
