edited events section

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                         <span class="card-header">Road Warrior</span>
                                     </div>
                                     <div class="content">
-                                        <div class="small-10 medium-11 large-11 column event_date event_txt">
+                                        <div class="small-10 medium-11 large-11 column card-event-date card-event-text">
                                             <p>I shall be telling this with a sigh . Somewhere ages and ages hence: Two roads diverged in a wood, and I</p>
                                         </div>
                                     </div>
@@ -164,7 +164,7 @@
                                         <span class="card-header">Road Warrior</span>
                                     </div>
                                     <div class="content">
-                                        <div class="small-10 medium-11 large-11 column event_date event_txt">
+                                        <div class="small-10 medium-11 large-11 column card-event-date card-event-text">
                                             <p>I shall be telling this with a sigh . Somewhere ages and ages hence: Two roads diverged in a wood, and I</p>
                                         </div>
                                     </div>
@@ -190,7 +190,7 @@
                                         <span class="card-header">Road Warrior</span>
                                     </div>
                                     <div class="content">
-                                        <div class="small-10 medium-11 large-11 column event_date event_txt">
+                                        <div class="small-10 medium-11 large-11 column card-event-date card-event-text">
                                             <p>I shall be telling this with a sigh . Somewhere ages and ages hence: Two roads diverged in a wood, and I</p>
                                         </div>
                                     </div>
