--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <h5 style="font-size:2em;">UPCOMING EVENTS</h5>
         <div class="row cards-home">
             <div class="small-12 medium-4 large-4 columns">
-                <div class="card-small">
+                <div class="card-small-big">
                     <div class=" small-centered large-centered columns ">
                         <div class="row">
                             <div class=" columns">
@@ -155,7 +155,7 @@
                 </div>
             </div>
             <div class="small-12 medium-4 large-4 columns">
-                <div class="card-small">
+                <div class="card-small-big">
                     <div class=" small-centered large-centered columns ">
                         <div class="row">
                             <div class=" columns">
@@ -181,7 +181,7 @@
                 </div>
             </div>
             <div class="small-12 medium-4 large-4 columns">
-                <div class="card-small">
+                <div class="card-small-big">
                     <div class=" small-centered large-centered columns ">
                         <div class="row">
                             <div class=" columns">
