edited event's card

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                             <div class=" columns">
                                 <div class="card-small">
                                     <div class="image img_22">
-                                        <span class="card-header">Road Warrior</span>
+                                        <span class="card-header">Jibebe Highschool Outreach</span>
                                     </div>
                                     <div class="content">
                                         <div class="small-10 medium-11 large-11 column card-event-date card-event-text">
@@ -161,7 +161,7 @@
                             <div class=" columns">
                                 <div class="card-small">
                                     <div class="image img_22">
-                                        <span class="card-header">Road Warrior</span>
+                                        <span class="card-header">Young Girls Camp Kawangware</span>
                                     </div>
                                     <div class="content">
                                         <div class="small-10 medium-11 large-11 column card-event-date card-event-text">
@@ -187,7 +187,7 @@
                             <div class=" columns">
                                 <div class="card-small">
                                     <div class="image img_22">
-                                        <span class="card-header">Road Warrior</span>
+                                        <span class="card-header">Riara River School</span>
                                     </div>
                                     <div class="content">
                                         <div class="small-10 medium-11 large-11 column card-event-date card-event-text">
