--- a/programs.html
+++ b/programs.html
@@ -5,104 +5,20 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Programs &#124; Stardom</title>
+    <!--<title>Programs &#124; Stardom</title>-->
     <!--<link rel="shortcut icon" href="img/logo.png" type="image/png">-->
-    <link href='https://fonts.googleapis.com/css?family=Raleway:200' rel='stylesheet' type='text/css'>
+    <!--<link href='https://fonts.googleapis.com/css?family=Raleway:200' rel='stylesheet' type='text/css'>-->
 
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/ionicons.css" />
-<<<<<<< HEAD
+
     <!--<link rel="stylesheet" href="css/app.css" />-->
-=======
-    <link rel="stylesheet" href="css/app.css" />
-    <link rel="stylesheet" href="css/nav_mobile.css" />
->>>>>>> df7d1041065eaea12c7c9aa2ca05f294b3a090b7
+    <!--<link rel="stylesheet" href="css/nav_mobile.css" />-->
     <link rel="stylesheet" href="programs.css" />
 
 </head>
 
 <body>
-
-    <!--    *******************************  -->
-    <!--    Beginning Of Nav Bar-->
-    <section>
-        <nav class="desk_nav top-navigation">
-            <ul>
-                <li>
-                    <a href="#home"><img src="./img/pngone.png"></a>
-                </li>
-                <li style="float:right; padding-top:20px;"><a data-open="exampleModal1" class="active" href="#about">CONTACT</a></li>
-                <li style="float:right; margin-right:100px; padding-top:20px;"><a href="./programs.html">SUPPORT</a></li>
-                <li style="float:right; padding-right:20px; padding-top:20px;"><a href="./events.html">EVENTS</a></li>
-                <li style="float:right; padding-right:20px; padding-top:20px;"><a href="./about.html">ABOUT</a></li>
-                <li style="float:right; padding-right:20px; padding-top:20px;"><a href="index.html">HOME</a></li>
-            </ul>
-        </nav>
-
-        <div id="myNav" class="overlay">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-            <div class="overlay-content">
-                <a href="index.html">HOME</a>
-                <a href="./about.html">ABOUT</a>
-                <a href="./events.html">EVENTS</a>
-                <a href="./programs.html">SUPPORT</a>
-                <a data-open="exampleModal1" href="#abot">CONTACT</a>
-            </div>
-        </div>
-        <span class="mobile_nav" style="font-size:30px;cursor:pointer;position:fixed;" onclick="openNav()">☰ </span>
-
-        <!--        *****************************************-->
-        <!--        MODAL TO BE OPENED ON CLICKING CONTACT-->
-        <div class=" reveal" id="exampleModal1" data-reveal>
-            <button class="close-button" data-close aria-label="Close modal" type="button">
-                <span aria-hidden="true">&times;</span>
-            </button>
-            <h1>Location&#40;s&#41;&#58;</h1>
-            <!--            KENYA-->
-            <h3>Kenya<span><p style="font-size: 20px;">&#40;Headquarters&#41;</p></span></h3>
-            <p>Stardom,
-                <br>Street 43,
-                <br> Lane 7,
-                <br> Block 23 Ngong Road,
-                <br> +254&#40;0&#41;701257903
-                <br> Nairobi, Kenya</p>
-
-
-            <!--            ZAMBIA-->
-            <h3>Zambia</h3>
-            <p>Stardom Foundation Office,
-                <br> Plot 34872A,
-                <br> Great N,
-                <br> +260&#40;0&#41;950798687
-                <br> Lusaka, Zambia</p>
-
-
-            <!--            UGANDA-->
-            <h3>Uganda</h3>
-            <p>Stardom Organisation,
-                <br> c/o AVSI,
-                <br> Plot 1119 Ggaba Road,
-                <br> +256&#40;0&#41;772778813
-                <br> Kyenjojo, Uganda</p>
-
-
-            <!--            NIGERIA-->
-            <h3>Nigeria</h3>
-
-            <p>Stardom Office,
-                <br>Number 3,
-                <br>Aliyu Abubakar Road,
-                <br> Anwan Rimi,
-                <br> +234&#40;0&#41;8031439750
-                <br> Kaduna, Nigeria</p>
-        </div>
-        <!--        END OF MODAL-->
-    </section>
-    <!--    End of Nav Bar-->
-
-
-
-<<<<<<< HEAD
 
 <div class="column row wrapper">
 
@@ -121,21 +37,16 @@
         </nav>
     </section>
 
-<h1>
-=======
-    <div class="column row wrapper">
 
-        <h1>
->>>>>>> df7d1041065eaea12c7c9aa2ca05f294b3a090b7
-    Stardom-Foundation | Programs
-</h1>
+    <div class="column row wrapper">
         <p>
-            Stardom-Foundation has three core programs: </p>
-        <ul>
-            <li>Ferox deuss ducunt ad contencio.</li>
-            <li>Cauliflower combines greatly with old tuna.</li>
-            <li>Why does the starship warp.</li>
-        </ul>
+            Stardom-Foundation has three core programs:
+
+            <ul>
+                <li>Ferox deuss ducunt ad contencio.</li>
+                <li>Cauliflower combines greatly with old tuna.</li>
+                <li>Why does the starship warp.</li>
+            </ul>
 
     </div>
 
@@ -246,11 +157,10 @@
         </div>
     </div>
 
-
-    <!--    </div>-->
     <footer>
         <p>Copyright © 2016 </p>
     </footer>
+</div>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
