--- a/programs.html
+++ b/programs.html
@@ -5,15 +5,11 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--<title>Programs &#124; Stardom</title>-->
-    <!--<link rel="shortcut icon" href="img/logo.png" type="image/png">-->
-    <!--<link href='https://fonts.googleapis.com/css?family=Raleway:200' rel='stylesheet' type='text/css'>-->
+    <title>Programs &#124; Stardom</title>
+    
 
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/ionicons.css" />
-
-    <!--<link rel="stylesheet" href="css/app.css" />-->
-    <!--<link rel="stylesheet" href="css/nav_mobile.css" />-->
     <link rel="stylesheet" href="programs.css" />
 
 </head>
