removed the nav bar

--- a/programs.html
+++ b/programs.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Programs &#124; Stardom</title>
-    
+
 
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/ionicons.css" />
@@ -18,20 +18,20 @@
 
 <div class="column row wrapper">
 
-    <section>
-        <nav class="top-navigation">
-            <ul>
-                <li>
-                    <a href="#home"><img src="./img/pngone.png"></a>
-                </li>
+    <!--<section>-->
+        <!--<nav class="top-navigation">-->
+            <!--<ul>-->
+                <!--<li>-->
+                    <!--<a href="#home"><img src="./img/pngone.png"></a>-->
+                <!--</li>-->
 
-                <li style="float:right; margin-right:100px; padding-top:20px;"><a href="#">PROGRAM</a></li>
-                <li style="float:right; padding-right:20px; padding-top:20px;"><a href="#">EVENTS</a></li>
-                <li style="float:right; padding-right:20px; padding-top:20px;"><a href="#">ABOUT</a></li>
-                <li style="float:right; padding-right:20px; padding-top:20px;"><a href="#">HOME</a></li>
-            </ul>
-        </nav>
-    </section>
+                <!--<li style="float:right; margin-right:100px; padding-top:20px;"><a href="#">PROGRAM</a></li>-->
+                <!--<li style="float:right; padding-right:20px; padding-top:20px;"><a href="#">EVENTS</a></li>-->
+                <!--<li style="float:right; padding-right:20px; padding-top:20px;"><a href="#">ABOUT</a></li>-->
+                <!--<li style="float:right; padding-right:20px; padding-top:20px;"><a href="#">HOME</a></li>-->
+            <!--</ul>-->
+        <!--</nav>-->
+    <!--</section>-->
 
 
     <div class="column row wrapper">
