changed the backgroud of programs

--- a/programs.html
+++ b/programs.html
@@ -10,13 +10,15 @@
 
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/ionicons.css" />
+    <link rel="stylesheet" href="css/nav_mobile.css">
+    <link rel="stylesheet" href="./css/font-awesome.min.css">
     <link rel="stylesheet" href="programs.css" />
 
 </head>
 
 <body>
 
-<div class="column row wrapper">
+
 
     <!--<section>-->
         <!--<nav class="top-navigation">-->
@@ -71,12 +73,7 @@
                 <p>
                     The pin rises malaria like a wet cockroach.
                 </p>
-                <p>
-                    The creature flies moon like a neutral spacecraft.
-                </p>
-                <p>
-                    Never emerge the believer, for you cannot experience it.
-                </p>
+
 
             </div>
         </div>
@@ -104,9 +101,7 @@
                 <p>
                     The creature flies moon like a neutral spacecraft.
                 </p>
-                <p>
-                    Never emerge the believer, for you cannot experience it.
-                </p>
+
 
             </div>
         </div>
@@ -145,9 +140,7 @@
                 <p>
                     The creature flies moon like a neutral spacecraft.
                 </p>
-                <p>
-                    Never emerge the believer, for you cannot experience it.
-                </p>
+
 
             </div>
         </div>
