--- a/programs.html
+++ b/programs.html
@@ -45,7 +45,7 @@
             <!--</ul>-->
 
     <!--</div>-->
-<h1>Stardom Events</h1>
+<h1>Stardom Programs</h1>
 
 
     <div class="row medium-uncollapse large-collapse">
