--- a/programs.html
+++ b/programs.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="img/how.png" type="image/png">
     <title>Programs &#124; Stardom</title>
 
 
