made responsive layout for the

--- a/programs.html
+++ b/programs.html
@@ -79,9 +79,9 @@
         </div>
     </div>
 
-    <div class="row medium-uncollapse large-collapse">
-        <div class="small-6 columns second">
-            <div class="first">
+    <div id="tonnie" class="row medium-uncollapse flex-row large-collapse">
+        <div class="small-6 columns lind-second">
+            <div class="first limbo">
                 <p>
                     The pin rises malaria like a wet cockroach.
                 </p>
@@ -105,11 +105,13 @@
 
             </div>
         </div>
-        <div class="small-6 columns third">
-            <div class="column">
+
+        <div class="small-6 columns lind-third">
+            <div class="column limbo">
                 <img src="img/bath.jpg" class="thumbnail" alt="">
             </div>
         </div>
+
     </div>
 
 
